--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   circular_countdown_timer: ^0.2.3
   flutter_countdown_timer: ^4.1.0
+  sleek_circular_slider: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
